Fix CRON function: use config.schedule, add updateRow function to prevent duplicates, add manual test endpoint

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,9 +5,18 @@
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
 
+# Scheduled function configuration
+[functions."cron-fetch-mileage"]
+  schedule = "25 11 * * *"
+
 [[redirects]]
   from = "/api/fetch-mileage"
   to = "/.netlify/functions/fetch-mileage"
+  status = 200
+
+[[redirects]]
+  from = "/api/cron-fetch-mileage"
+  to = "/.netlify/functions/cron-fetch-mileage"
   status = 200
 
 [[redirects]]
