Update GitHub Actions workflow: change URL to evidence.vtuhy.cz and schedule to 12:32 CET

--- a/.github/workflows/cron-fetch-mileage.yml
+++ b/.github/workflows/cron-fetch-mileage.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run daily at 12:30 CET (winter time) = 11:30 UTC
     # For summer time (CEST), change to: '30 10 * * *'
-    - cron: '30 11 * * *'
+    - cron: '32 11 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Call Netlify CRON Function
         run: |
-          curl -X POST https://toyota-evidence-kilometru.netlify.app/api/cron-fetch-mileage || echo "Request failed"
+          curl -X POST https://evidence.vtuhy.cz/api/cron-fetch-mileage || echo "Request failed"
         env:
           # Optional: Add any auth headers if needed
           # AUTHORIZATION: ${{ secrets.NETLIFY_AUTH_TOKEN }}
