Add better logging and error handling to GitHub Actions workflow

--- a/.github/workflows/cron-fetch-mileage.yml
+++ b/.github/workflows/cron-fetch-mileage.yml
@@ -13,4 +13,14 @@ jobs:
     steps:
       - name: Call Netlify CRON Function
         run: |
-          curl -X POST https://evidence.vtuhy.cz/api/cron-fetch-mileage || echo "Request failed"
+          echo "Calling CRON endpoint at $(date)"
+          response=$(curl -s -w "\nHTTP_CODE:%{http_code}" -X POST https://evidence.vtuhy.cz/api/cron-fetch-mileage)
+          echo "$response"
+          http_code=$(echo "$response" | grep "HTTP_CODE" | cut -d: -f2)
+          if [ "$http_code" = "200" ]; then
+            echo "✅ CRON executed successfully"
+            exit 0
+          else
+            echo "❌ CRON failed with HTTP code: $http_code"
+            exit 1
+          fi
