Improve GitHub Actions workflow logging and don't fail on non-200 responses

--- a/.github/workflows/cron-fetch-mileage.yml
+++ b/.github/workflows/cron-fetch-mileage.yml
@@ -14,14 +14,15 @@ jobs:
       - name: Call Netlify CRON Function
         run: |
           echo "Calling CRON endpoint at $(date)"
-          http_code=$(curl -s -o /tmp/response.json -w "%{http_code}" -X POST https://evidence.vtuhy.cz/api/cron-fetch-mileage)
+          response=$(curl -s -w "\n%{http_code}" -X POST https://evidence.vtuhy.cz/api/cron-fetch-mileage)
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
           echo "HTTP Status Code: $http_code"
-          echo "Response:"
-          cat /tmp/response.json
-          if [ "$http_code" = "200" ]; then
+          echo "Response body: $body"
+          if [ "$http_code" -ge 200 ] && [ "$http_code" -lt 300 ]; then
             echo "✅ CRON executed successfully"
             exit 0
           else
-            echo "❌ CRON failed with HTTP code: $http_code"
-            exit 1
+            echo "⚠️ CRON returned HTTP $http_code (but may have still processed the request)"
+            exit 0  # Don't fail workflow - data might still be saved
           fi
