Add timeouts to prevent 503 errors and optimize function execution time

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,10 @@
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
 
+# CRON function timeout configuration (max 10s for Free plan)
+[functions."cron-fetch-mileage"]
+  timeout = 10
+
 [[redirects]]
   from = "/api/fetch-mileage"
   to = "/.netlify/functions/fetch-mileage"
